--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script type="module" src="./index.js"></script>
+
 </head>
 
 <body>
-
+  <div id="app"></div>
+  <script type="module" src="./index.js"></script>
 </body>
 
 </html>
